--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -12,8 +12,8 @@
 }
 
 .sidenav-container {
-    position: relative;
-    top: 0;
+    position: absolute;
+    top: 60px;
     bottom: 0;
     left: 0;
     right: 0;
