ispravljena greska koja sece brojeve na piti

--- a/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.css
+++ b/src/app/charts/advanced-pie-chart/advanced-pie-chart.component.css
@@ -31,3 +31,7 @@
         /* background-color: brown; */
     }
 }
+
+::ng-deep .advanced-pie-legend .legend-items-container {
+    line-height: 32px;
+}
