--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -10,48 +10,46 @@
     </button>
 </mat-toolbar>
 
-<div class="test">
-    <mat-sidenav-container class="sidenav-container" autosize="true">
-        <mat-sidenav #sidenav class="sidenav" mode="side" [(opened)]="opened" [fixedInViewport]="false"
-            [fixedTopGap]="0" [fixedBottomGap]="0">
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['dashboard']">
-                    <mat-icon class="nav-icon">dashboard</mat-icon>Dashboard
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['user']">
-                    <mat-icon class="nav-icon">supervised_user_circle</mat-icon>Users
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['object']">
-                    <mat-icon class="nav-icon">store</mat-icon>Objects
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['retailer']">
-                    <mat-icon class="nav-icon">vertical_split</mat-icon>Retailers
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['storeCheckReceiver']">
-                    <mat-icon class="nav-icon">email</mat-icon>Store Check Receivers
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['feedbackCategory']">
-                    <mat-icon class="nav-icon">ballot</mat-icon>Feedback Categories
-                </a>
-            </mat-nav-list>
-            <mat-nav-list>
-                <a mat-list-item class="nav-list-item" [routerLink]="['productCategory']">
-                    <mat-icon class="nav-icon">fastfood</mat-icon>Product Categories
-                </a>
-            </mat-nav-list>
-        </mat-sidenav>
-        <mat-sidenav-content class="sidenav-content">
-            <router-outlet></router-outlet>
-        </mat-sidenav-content>
-    </mat-sidenav-container>
-</div>
+<mat-sidenav-container class="sidenav-container" autosize="true">
+    <mat-sidenav #sidenav class="sidenav" mode="side" [(opened)]="opened" [fixedInViewport]="false" [fixedTopGap]="0"
+        [fixedBottomGap]="0">
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['dashboard']">
+                <mat-icon class="nav-icon">dashboard</mat-icon>Dashboard
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['user']">
+                <mat-icon class="nav-icon">supervised_user_circle</mat-icon>Users
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['object']">
+                <mat-icon class="nav-icon">store</mat-icon>Objects
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['retailer']">
+                <mat-icon class="nav-icon">vertical_split</mat-icon>Retailers
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['storeCheckReceiver']">
+                <mat-icon class="nav-icon">email</mat-icon>Store Check Receivers
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['feedbackCategory']">
+                <mat-icon class="nav-icon">ballot</mat-icon>Feedback Categories
+            </a>
+        </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['productCategory']">
+                <mat-icon class="nav-icon">fastfood</mat-icon>Product Categories
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="sidenav-content">
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
