--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -46,10 +46,10 @@
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
       </mat-progress-spinner>
     </div>
-    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks.</mat-toolbar>
+    <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks</mat-toolbar>
     <mat-paginator [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)"></mat-paginator>
   </div>
-  <div class="fadeIn third"> 
+  <div class="fadeIn third">
     <button mat-stroked-button color="primary" class="mat-btn " (click)="exit()">Exit</button>
   </div>
 </div>
