--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 mat-dialog-title *ngIf="flag == 1">Feedback</h3>
+  <h3 mat-dialog-title>New feedback</h3>
 
   <form class="mat-dialog-content" #formControl="ngForm">
 
