--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -48,7 +48,7 @@
     </mat-progress-spinner>
   </div>
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No retailers</mat-toolbar>
-  <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
+  <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
     (page)="loadDataOnPageEvent($event)">
   </mat-paginator>
 </div>
