--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar color="primary" class="header">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
-        (click)="sidenav.toggle()">
+    <button mat-icon-button class="example-icon" aria-label="Menu" (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
     </button>
     <span>{{title}}</span>
