--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -67,7 +67,7 @@
       </mat-progress-spinner>
     </div>
     <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users</mat-toolbar>
-    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[2, 5, 10, 25, 100]" [length]="length"
     (page)="loadDataOnPageEvent($event)">
   </mat-paginator>
   </div>
