--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -47,6 +47,11 @@
                 <mat-icon class="nav-icon">fastfood</mat-icon>Product Categories
             </a>
         </mat-nav-list>
+        <mat-nav-list>
+            <a mat-list-item class="nav-list-item" [routerLink]="['uploads']">
+                <mat-icon class="nav-icon">cloud_upload</mat-icon>Upload Files
+            </a>
+        </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="sidenav-content">
         <router-outlet></router-outlet>
