--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -15,22 +15,22 @@
         <div class="object-info-data" *ngIf="showDetails">
             <div class="object-info-slider">
                 <div class="card1">
-                    <div class="obj-info"> <u>Address:</u><b> {{ object.address }}, {{ object.city }}</b></div>
-                    <div class="obj-info"> <u>Format:</u><b> {{ object.objectFormat }}</b> </div>
-                    <div class="obj-info"> <u>Retailer:</u><b> {{ object.retailer.retailerName }}</b></div>
-                    <div class="obj-info"> <u>Assortment module:</u><b> {{ object.objectInfo.assortmentModule }}</b>
+                    <div class="obj-info"> <u>Address:</u><strong> {{ object.address }}, {{ object.city }}</strong></div>
+                    <div class="obj-info"> <u>Format:</u><strong> {{ object.objectFormat }}</strong></div>
+                    <div class="obj-info"> <u>Retailer:</u><strong> {{ object.retailer.retailerName }}</strong></div>
+                    <div class="obj-info"> <u>Assortment module:</u><strong> {{ object.objectInfo.assortmentModule }}</strong>
                     </div>
-                    <div class="obj-info"> <u>Number of registers:</u><b> {{ object.objectInfo.registersNumber }}</b>
+                    <div class="obj-info"> <u>Number of registers:</u><strong> {{ object.objectInfo.registersNumber }}</strong>
                     </div>
                 </div>
                 <div class="card1">
-                    <div class="obj-info"> <u>KAM:</u><b> {{ object.kam}}</b></div>
-                    <div class="obj-info"> <u>Director:</u><b> {{ object.director}}</b></div>
-                    <div class="obj-info"> <u>Supervisor:</u><b> {{ object.supervisor}}</b></div>
-                    <div class="obj-info"> <u>Merchandiser:</u><b> {{ object.merchandiser}}</b></div>
-                    <div class="obj-info"> <u>Commercialist:</u><b> {{ object.commercialist}}</b> </div>
-                    <div class="obj-info"> <u>Requisition days:</u><b> {{ object.requisitionDays }}</b> </div>
-                    <div class="obj-info"> <u>Merchendiser req. days:</u><b> {{ object.merchandiserRevisionDays }}</b>
+                    <div class="obj-info"> <u>KAM:</u><strong> {{ object.kam}}</strong></div>
+                    <div class="obj-info"> <u>Director:</u><strong> {{ object.director}}</strong></div>
+                    <div class="obj-info"> <u>Supervisor:</u><strong> {{ object.supervisor}}</strong></div>
+                    <div class="obj-info"> <u>Merchandiser:</u><strong> {{ object.merchandiser}}</strong></div>
+                    <div class="obj-info"> <u>Commercialist:</u><strong> {{ object.commercialist}}</strong> </div>
+                    <div class="obj-info"> <u>Requisition days:</u><strong> {{ object.requisitionDays }}</strong> </div>
+                    <div class="obj-info"> <u>Merchendiser req. days:</u><strong> {{ object.merchandiserRevisionDays }}</strong>
                     </div>
                 </div>
             </div>
