--- a/src/app/components/store-check-receiver/store-check-receiver.component.html
+++ b/src/app/components/store-check-receiver/store-check-receiver.component.html
@@ -1,5 +1,5 @@
 <div class="container mat-elevation-z8">
-    <table class="mat-table table">
+    <table class="mat-table table" aria-describedby="store check receivers">
         <tr class="mat-header-row header">
             <th class="mat-header-cell header-item column-name">Receiver</th>
             <th class="mat-header-cell header-email-item column-name">Email
