--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
@@ -50,7 +50,7 @@
   color: #39ace7;
 }
 
-
+/*
 @media (max-width: 600px) {
 
   .item2 {
@@ -60,7 +60,7 @@
   .item3 {
     right: 0%;
   }
-}
+}*/
 
 
 
