--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -38,10 +38,17 @@
 
 
 
-    <div class="form fb-img" *ngIf="data.imgResolve">
+    <div class="form fb-img" *ngIf="data.imgResolve && data.isImgHorizontal">
 
       <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.imgResolve}}" alt="SC photo"
-        width="250" height="250" />
+        width="250" height="200" />
+
+    </div>
+
+    <div class="form fb-img" *ngIf="data.imgResolve && !data.isImgHorizontal">
+
+      <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.imgResolve}}" alt="SC photo"
+        width="200" height="250" />
 
     </div>
 
@@ -70,15 +77,15 @@
       <button mat-icon-button color="primary" *ngIf="data.img=='' || data.img=='NULL' " (click)="openInfo()">
         <mat-icon> warning </mat-icon>
       </button>
+
+      <button mat-button class="item2" *ngIf="resolveFeedbacks" type="submit" (click)="submitForm()"
+      [disabled]="!imageUploaded && !isLoading">Resolve</button>
+      <button mat-button class="item2" (click)="close()">Close</button>
       <div *ngIf="isLoading"
       style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
       <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
       </mat-progress-spinner>
     </div>
-      <button mat-button class="item2" *ngIf="resolveFeedbacks" type="submit" (click)="submitForm()"
-      [disabled]="!imageUploaded && !isLoading">Resolve</button>
-      <button mat-button class="item2" (click)="close()">Close</button>
-
 
     </div>
   </form>
