--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -57,7 +57,7 @@
 
 
           <button mat-button class="test" type="submit" [disabled]="isLoading" (click)="submitForm()"
-          [disabled]="!formControl.valid || !imageUploaded"><span class="feedbackSpan"><a
+          [disabled]="!formControl.valid"><span class="feedbackSpan"><a
             onmouseover="this.style.color='white';" onmouseout="this.style.color='#39ace7'">Finish</a></span></button>
             <button mat-button class="test" (click)="close()">Close</button>
 
