--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -94,7 +94,7 @@
       </button>
 
       <button mat-button class="item2" *ngIf="resolveFeedbacks" type="submit" (click)="submitForm()"
-      [disabled]="!imageUploaded && !isLoading">Resolve</button>
+      [disabled]="!isLoading">Resolve</button>
       <button mat-button class="item2" (click)="close()">Close</button>
       <div *ngIf="isLoading"
       style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
