--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -32,7 +32,7 @@
     </div>
 
 
-
+    <div class="form"  *ngIf="data.imgResolve">Resolve:</div>
     <div class="form fb-img" *ngIf="data.imgResolve">
 
       <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.imgResolve}}" alt="SC photo"
