--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -1,36 +1,97 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add position</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Delete secondary position</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Socondary position</h3>
     <form class="mat-dialog-content" #formControl="ngForm">
-        <div class="form">
+        <div class="form" *ngIf="flag == 1">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.posClassName" placeholder="Secondary Position Class" name="posClassName"
-                    [disabled]="flag == 2" required="flag == 1">
+                    required="flag == 1">
                     <mat-option *ngFor="let class of positionClasses" [value]="class.positionClassName">
                         {{ class.positionClassName }}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
+        <div class="form" *ngIf="flag == 2 || flag == 3">
+            <mat-form-field>
+                <mat-label>Position class</mat-label>
+                <input matInput [(ngModel)]="data.posClassName" name="posClassName" [disabled]="true" required />
+            </mat-form-field>
+        </div>
 
-        <div class="form">
+
+        <div class="form" *ngIf="flag == 1">
             <mat-form-field>
                 <mat-select [(ngModel)]="data.posTypeName" placeholder="Secondary Position Type" name="posTypeName"
-                    [disabled]="flag == 2" required="flag == 1">
+                    required="flag == 1">
                     <mat-option *ngFor="let type of positionTypes" [value]="type.positionTypeName">
                         {{ type.positionTypeName }}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
+        <div class="form" *ngIf="flag == 2 || flag == 3">
+            <mat-form-field>
+                <mat-label>Position type</mat-label>
+                <input matInput [(ngModel)]="data.posTypeName" name="posTypeName" [disabled]="true" required />
+            </mat-form-field>
+        </div>
+
+        <div class="form" *ngIf="flag == 1">
+            <mat-form-field>
+                <mat-select [(ngModel)]="data.productCategory" placeholder="Product Category" name="productCategory"
+                    required="flag == 1">
+                    <mat-option *ngFor="let category of productCategories" [value]="category.productCategoryName">
+                        {{ category.productCategoryName }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="form" *ngIf="flag == 2 || flag == 3">
+            <mat-form-field>
+                <mat-label>Product category</mat-label>
+                <input matInput [(ngModel)]="data.productCategory" name="productCategory" [disabled]="true" required />
+            </mat-form-field>
+        </div>
+
+        <div class="form" *ngIf="flag == 1">
+            <mat-form-field>
+                <mat-select [(ngModel)]="data.supplier" placeholder="Supplier" name="supplier" required="flag == 1">
+                    <mat-option *ngFor="let supplier of suppliers" [value]="supplier">
+                        {{ supplier }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="form" *ngIf="flag == 2 || flag == 3">
+            <mat-form-field>
+                <mat-label>Supplier</mat-label>
+                <input matInput [(ngModel)]="data.supplier" name="supplier" [disabled]="true" required />
+            </mat-form-field>
+        </div>
+
+        <div class="form" *ngIf="flag == 1">
+            <mat-form-field>
+                <mat-select [(ngModel)]="data.location" placeholder="Location" name="location" required="flag == 1">
+                    <mat-option *ngFor="let location of locations" [value]="location">
+                        {{ location }}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div class="form" *ngIf="flag == 2 || flag == 3">
+            <mat-form-field>
+                <mat-label>Location</mat-label>
+                <input matInput [(ngModel)]="data.location" name="location" [disabled]="true" required />
+            </mat-form-field>
+        </div>
 
         <div mat-dialog-actions>
-
             <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="add()"
-            [disabled]="!formControl.valid">Ok</button>
+                [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="item2" *ngIf="flag == 2" type="submit" (click)="delete()">Delete</button>
             <button mat-button class="item2" (click)="close()">Cancel</button>
-        
         </div>
     </form>
 </div>
