--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -3,18 +3,18 @@
   <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
     <ng-container matColumnDef="date">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">Date</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.date | date:'dd.MM.yyyy.' }}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="feedbackCategoryName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">Category</mat-header-cell>
       <mat-cell *matCellDef="let row">{{ row.feedbackCategoryName }}</mat-cell>
     </ng-container>
 
 
     <ng-container matColumnDef="username">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>User</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">User</mat-header-cell>
       <mat-cell *matCellDef="let row" class="table-row">{{ row.username }}</mat-cell>
     </ng-container>
 
@@ -30,7 +30,8 @@
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
-      (click)="openDialog(row.feedbackCategoryName,row.productCategoryName,row.text,row.date,row.resolved,row.img,row.username)"></mat-row>
+      (click)="openDialog(row.feedbackCategoryName,row.productCategoryName,row.text,row.date,row.resolved,row.img,row.username)">
+    </mat-row>
   </mat-table>
 
   <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white;">
@@ -43,5 +44,6 @@
   </mat-paginator>
 
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No feedbacks</mat-toolbar>
-  <button mat-stroked-button color="primary" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectIdCompany]">Show Resolved</button>
+  <button mat-stroked-button color="primary" class="mat-btn" [routerLink]="['/resolvedFeebacks/', objectIdCompany]">Show
+    Resolved</button>
 </div>
