--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -5,26 +5,26 @@
     <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
     <h2 style="height:80px;"> <span>Resolved Feedbacks</span> </h2>
 
-</div>
+  </div>
   <div class="fadeIn second">
     <mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
 
 
 
       <ng-container matColumnDef="date">
-        <mat-header-cell *matHeaderCellDef mat-sort-header style="width:30%">Date</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name" style="width:30%">Date</mat-header-cell>
         <mat-cell *matCellDef="let row" style="width:20%">{{ row.date | date:'dd.MM.' }}</mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="feedbackCategoryName">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>Category</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">Category</mat-header-cell>
         <mat-cell *matCellDef="let row">{{ row.feedbackCategoryName }}</mat-cell>
       </ng-container>
 
 
 
       <ng-container matColumnDef="username">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>User</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef mat-sort-header class="column-name">User</mat-header-cell>
         <mat-cell *matCellDef="let row" class="table-row">{{ row.username }}</mat-cell>
       </ng-container>
 
