--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   /* min-width: 450px; */
-  }
+}
 
 .form {
   display: flex;
@@ -21,11 +21,21 @@
   justify-content: center;
 }
 
-.item2{
+.item2 {
   background-color: white;
   color: #39ace7;
   margin-bottom: 4%;
   border: 2px solid #39ace7;
+  margin-left: 10px;
+}
+
+.item2-delete {
+  background-color: white;
+  color: #ff0000;
+  ;
+  margin-bottom: 4%;
+  border: 2px solid #ff0000;
+  ;
   margin-left: 10px;
 }
 
@@ -34,16 +44,17 @@ button:hover {
   background-color: #39ace7;
   transition: 0.3s;
 }
+
 button[disabled]:hover {
- background-color: #fff;
- cursor: not-allowed;
+  background-color: #fff;
+  cursor: not-allowed;
 }
 
 .mat-spinner-color::ng-deep circle {
   stroke: #56baed !important;
 }
 
-.browseFile{
+.browseFile {
   color: white;
   width: 10px;
   height: 10px;
@@ -56,6 +67,7 @@ button[disabled]:hover {
 button {
   outline: none;
 }
+
 ::ng-deep .mat-button-focus-overlay {
   display: none;
 }
