Rotacija i dimenzija fb slika

--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -3,7 +3,7 @@
 
   <form class="mat-dialog-content" #formControl="ngForm">
 
-    <div class="form fb-img">
+    <div class="form fb-img marginbottom">
 
       <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.img}}" id="fbphoto" alt="SC photo"
         width="250" height="250" #fbphoto />
