--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -41,8 +41,8 @@
 
 
     <form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="!imageUploaded">
-      <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" capture="camera"
-        fromControlName="file" required hidden>
+      <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" 
+        fromControlName="file" required hidden capture="camera">
       <label style="margin-bottom:5%">Take photo:</label>
 
       <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
