--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -42,7 +42,7 @@
 
     <form [formGroup]="form" (ngSubmit)="submitForm()" *ngIf="!imageUploaded">
       <input type="file" id="inputFile" (change)="uploadFile($event)" accept="image/*" 
-        fromControlName="file" required hidden capture="camera">
+        fromControlName="file" required hidden capture>
       <label style="margin-bottom:5%">Take photo:</label>
 
       <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
