Prikaz finish store check samo kada ima osc

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -16,7 +16,7 @@
         <div class="fadeIn third btn-group">
             <div>
                 <button mat-stroked-button color="primary" class="mat-btn" (click)="openDialog()"
-                    *ngIf="!resolveFeedbacks && storeCheck">Finish StoreCheck</button>
+                    *ngIf="!resolveFeedbacks && showFinishStoreCheck">Finish StoreCheck</button>
             </div>
             <div>
             </div>
