--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -6,7 +6,7 @@
     <div class="form fb-img marginbottom">
 
       <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.img}}" id="fbphoto" alt="SC photo"
-        width="250" height="250" #fbphoto />
+        width="" height="" #fbphoto />
 
     </div>
 
@@ -36,7 +36,7 @@
     <div class="form fb-img" *ngIf="data.imgResolve">
 
       <img src="https://storagestorecheck.blob.core.windows.net/storecheck/{{data.imgResolve}}" alt="SC photo"
-        width="250" height="200" id="fbphotoresolve" />
+        width="" height="" id="fbphotoresolve" />
 
     </div>
 
